--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="apple-mobile-web-app-capable" content="yes" />
   <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
   <meta name="theme-color" content="#667eea" />
-  <title>Tahleel Notes — Enhanced Glass Edition</title>
+  <title>ShhhNotes</title>
   <link rel="icon" href="https://cdn-icons-png.flaticon.com/512/942/942748.png" type="image/png">
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
   <style>
@@ -1080,7 +1080,7 @@
       <div class="brand">
         <div class="logo">🧊</div>
         <div>
-          <div class="title">Tahleel Notes</div>
+          <div class="title">ShhhNotes</div>
           <div class="subtitle">A website made out of Boredom</div>
         </div>
       </div>
@@ -1993,3 +1993,4 @@
   </script>
 </body>
 </html>
+
