--- a/index.html
+++ b/index.html
@@ -1980,7 +1980,7 @@
       // Welcome notification
       setTimeout(()=>{
         showNotification({
-          title:'Welcome to Tahleel Notes',
+          title:'Welcome to ShhhNotes',
           message:'A side project made in boredom hehe',
           type:'info',
           duration:4000
@@ -1993,4 +1993,5 @@
   </script>
 </body>
 </html>
+
 
